# hs-little-helper

./: .gitignore  Application.hs  Dockerfile  Foundation.hs  LICENSE  Makefile  README.md  TODO.txt  hs-little-helper.cabal  stack.yaml
Handler/: Pilots.hs
Settings/: StaticFiles.hs
app/: Cmdline.hs  Main.hs  devel.hs  yesodtest.hs
config/: keter.yml  routes  settings.yml
dump/: alliances.json  characters.json  corporations.json  id_by_name.json  killboards.json
src/Eve/Api/: Cache.hs  Config.hs  Esi.hs  FreeHttp.hs  Http.hs  Interp.hs  Par.hs  Types.hs  Xml.hs  Zkill.hs
templates/: default-layout.hamlet  pilots.hamlet
