name:                hs-little-helper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/random-j-farmer/hs-little-helper#readme
license:             BSD3
license-file:        LICENSE
author:              Random J. Farmer
maintainer:          random.j.farmer@gmail.com
copyright:           (c) 2017 Random J. Farmer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eve.Api.Config
                     , Eve.Api.Types
                     , Eve.Api.Http
                     , Eve.Api.Esi
                     , Eve.Api.Xml
                     , Eve.Api.Zkill
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , cert-store-manager
                     , deepseq
                     , exceptions
                     , formatting
                     , free
                     , hexpat
                     , http-client
                     , http-client-tls
                     , http-types
                     , logging
                     , network
                     , monad-par
                     , SafeSemaphore
                     , split
                     , text
                     , time
                     , transformers
                     , url
                     , utf8-string
                     , yesod
  default-language:    Haskell2010

executable hs-little-helper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-little-helper
                     , bytestring
                     , containers
                     , cert-store-manager
                     , formatting
                     , logging
                     , network
                     , text
                     , utf8-string
                     , yesod
  default-language:    Haskell2010

test-suite hs-little-helper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-little-helper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/random-j-farmer/hs-little-helper
